--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,19 +24,27 @@
     }
 
     .box--style {
-        @apply shadow-[4px_6px_0_0_black]
+        @apply shadow-[4px_6px_0_0]
+    }
+
+    .box--style--sm {
+        @apply shadow-[2px_4px_0_0]
     }
 
     .board--style {
         @apply shadow-[0px_6px_0_0] rounded-md cursor-pointer
     }
 
+    .board--style--sm {
+        @apply shadow-[0px_4px_0_0] rounded-sm cursor-pointer
+    }
+
     .board--hover {
-        @apply hover:mt-[6px] hover:shadow-none hover:brightness-110  transition-all
+        @apply hover:mt-[6px] hover:shadow-none hover:brightness-110 transition-all
     }
 
     .button--style {
-        @apply border-gray-600 border-[3px] px-4 py-2 text-gray-600 box-border font-semibold
+        @apply border-gray-600 border-[3px] px-3 py-1 text-gray-600 box-border font-semibold
     }
 
     .button--style--dark {
@@ -64,13 +72,13 @@ label {
 
 a {
     font-weight: 500;
-    color: #646cff;
+    color: inherit;
     text-decoration: inherit;
 }
-
-a:hover {
-    color: #535bf2;
-}
+/**/
+/* a:hover { */
+/*     color: #535bf2; */
+/* } */
 
 h1 {
     font-size: 3.5rem;
