feat: pinned boards
commit 3ce2d3d1912b3b215acc7a374652f8753dbf374a
Author: = <nguyentin148@gmail.com>
Date:   Sat Mar 2 23:34:55 2024 +0700

    fixup(pinned-boards): add pinned boards to /board page + cleanup

commit f32583e49cbd43e1e6903700b14fdfb4fa9e526d
Author: = <nguyentin148@gmail.com>
Date:   Sat Mar 2 23:20:03 2024 +0700

    fixup: chat messages incorrect order

commit 56bae3907c5a1163255a57ac0516a9dcad8c42a8
Author: = <nguyentin148@gmail.com>
Date:   Sat Mar 2 22:39:25 2024 +0700

    feat: delete pinned board

commit 4f1f139ba85d8983f34dcdc975bc484d6409a7da
Author: = <nguyentin148@gmail.com>
Date:   Sat Mar 2 12:33:19 2024 +0700

    feat: setup for pinned boards

commit 49f5c2d52251a77980bf9902ca8d83d4ee046c85
Author: = <nguyentin148@gmail.com>
Date:   Thu Feb 29 23:25:14 2024 +0700

    chore(controllers + ui)

commit a544f95c91eeb8b816dacd135fb02f167f8cb7f3
Author: = <nguyentin148@gmail.com>
Date:   Wed Feb 28 22:29:56 2024 +0700

    feat(wip): pin board

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,11 +34,11 @@
     }
 
     .board--style {
-        @apply shadow-[0px_6px_0_0] rounded-md cursor-pointer
+        @apply shadow-[0px_6px_0_0] cursor-pointer
     }
 
     .board--style--sm {
-        @apply shadow-[0px_4px_0_0] rounded-sm cursor-pointer
+        @apply shadow-[0px_4px_0_0] cursor-pointer
     }
 
     .board--hover {
@@ -58,11 +58,11 @@
     }
 
     .anchor--style {
-        @apply hover:text-white hover:bg-gray-400 flex justify-center items-center p-2 rounded-md transition-all text-gray-600
+        @apply hover:text-white hover:bg-gray-400 flex justify-center items-center p-2 transition-all text-gray-600
     }
 
     .anchor--style--selected {
-        @apply hover:text-white text-white bg-gray-500 flex justify-center items-center p-2 rounded-md
+        @apply hover:text-white text-white bg-gray-500 flex justify-center items-center p-2
     }
 
     .card--detail--button {
@@ -101,3 +101,7 @@ h1 {
     font-size: 3.5rem;
 }
 
+.top-left-auto {
+    top: auto !important;
+    left: auto !important;
+}
