refactor: card-utils
commit 2d5b1581a8b9eab266303209b66932706f234d4d
Author: = <nguyentin148@gmail.com>
Date:   Fri Mar 15 23:29:09 2024 +0700

    fix: remove "(copied)" after copied list/card

commit c120994f4fed8c50bf7b06bf4bf689ca05bec340
Author: = <nguyentin148@gmail.com>
Date:   Fri Mar 15 16:38:34 2024 +0700

    refactor: using CardDetail & CardQuickEditor component in Board

commit c32614039d7a8b340250e4757afd7b88e17ce633
Author: = <nguyentin148@gmail.com>
Date:   Tue Mar 12 23:18:43 2024 +0700

    feat(wip)

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -101,6 +101,10 @@ h1 {
     font-size: 3.5rem;
 }
 
+div:focus {
+    outline: none;
+}
+
 .top-left-auto {
     top: auto !important;
     left: auto !important;
