--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,7 +46,7 @@
     }
 
     .button--style {
-        @apply border-gray-600 border-[2px] px-3 py-2 text-gray-600 box-border font-semibold
+        @apply border-gray-600 border-[2px] px-3 py-2 text-gray-600 box-border font-medium
     }
 
     .button--style--dark {
@@ -54,7 +54,7 @@
     }
 
     .button--style--rounded {
-        @apply shadow-[0_3px_0_0] border-[2px] rounded-md font-semibold
+        @apply shadow-[0_3px_0_0] border-[2px] rounded-md font-medium
     }
 
     .anchor--style {
@@ -84,7 +84,6 @@ label {
 #root {
     width: 100%;
     height: 100vh;
-    background: lightblue;
     display: flex;
     flex-direction: column;
     overflow-y: auto;
@@ -92,7 +91,7 @@ label {
 }
 
 #board-wrapper {
-    height: calc(100% - 150px);
+    height: calc(100% - 125px);
     width: 100vw;
 }
 
