--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600;700&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600;700&display=swap');*/
+/*@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap');*/
 
 @tailwind base;
 @tailwind components;
@@ -72,7 +75,7 @@
 
 body,
 html {
-  font-family: 'Fira Code', sans-serif;
+  font-family: 'IBM Plex Mono', monospace;
 }
 
 label {
@@ -183,7 +186,7 @@ div:focus, dialog:focus {
     }
 
     .list__item {
-        width: 225px;
+        width: 240px;
     }
 
     .card__item {
