feat: card due date
commit a6148cf2f27dc8b15fa381fbcf008d79b61e5857
Author: TengNg <nguyentin148@gmail.com>
Date:   Thu Jun 6 20:38:11 2024 +0700

    feat: card due date

commit fea7826ba52c6751ec8f1759db36ca37f3e9ab38
Author: TengNg <nguyentin148@gmail.com>
Date:   Wed Jun 5 21:01:56 2024 +0700

    feat: set card due date

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -148,6 +148,10 @@ div:focus, dialog:focus {
     background: rgba(241, 241, 241, 0.55);
 }
 
+.past__due__card {
+    background: rgba(255, 179, 225, 0.5);
+}
+
 .card__item.focused {
     background: rgba(226, 232, 240, 0.75);
 }
