--- a/client/src/index.css
+++ b/client/src/index.css
@@ -172,12 +172,13 @@ div:focus, dialog:focus {
 
 .rsw-toolbar {
     background-color: transparent !important;
-
 }
 
 .rsw-ce {
-    overflow: scroll;
+    height: 600px;
+    overflow: auto;
 }
+
 
 @media only screen and (max-width: 500px) {
     #root {
@@ -252,5 +253,9 @@ div:focus, dialog:focus {
     #bottom-buttons > button {
         padding: 0.5rem;
         font-size: 9px !important;
+    }
+
+    .rsw-ce {
+        height: 480px;
     }
 }
