--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,3 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600;700&display=swap');*/
-/*@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');*/
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-/*@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap');*/
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -81,14 +76,19 @@
     }
 }
 
+@font-face {
+    font-family: 'Roboto Mono';
+    src: url('./fonts/RobotoMono-VariableFont_wght.ttf') format('truetype');
+}
+
 * {
     box-sizing: border-box;
 }
 
 body,
 html {
-  font-family: 'IBM Plex Mono', monospace;
-  box-sizing: border-box;
+    font-family: 'Roboto Mono', monospace;
+    box-sizing: border-box;
 }
 
 label {
@@ -153,7 +153,7 @@ div:focus, dialog:focus {
 }
 
 .card__item.focused {
-    background: rgba(226, 232, 240, 0.75);
+    outline: 3px solid blue;
 }
 
 .list__item {
