--- a/client/src/index.css
+++ b/client/src/index.css
@@ -253,3 +253,20 @@ div:focus, dialog:focus {
         height: 480px;
     }
 }
+
+.loader {
+    width: 1.5rem;
+    aspect-ratio: 1;
+    --c:no-repeat linear-gradient(#4b5563 0 0);
+    background: var(--c), var(--c), var(--c);
+    animation: anim-1 1s infinite,
+               anim-2 1s infinite;
+}
+@keyframes anim-1 {
+    0%,100% {background-size:20% 100%}
+    33%,66% {background-size:20% 20%}
+}
+@keyframes anim-2 {
+    0%,33%   {background-position: 0    0, 50% 50%, 100% 100%}
+    66%,100% {background-position: 100% 0, 50% 50%, 0    100%}
+}
