--- a/client/src/index.css
+++ b/client/src/index.css
@@ -76,10 +76,8 @@
     }
 }
 
-@font-face {
-    font-family: 'Roboto Mono';
-    src: url('./fonts/RobotoMono-VariableFont_wght.ttf') format('truetype');
-}
+@font-face { font-family: 'Roboto Mono'; src: url('./fonts/RobotoMono-VariableFont_wght.ttf') format('truetype'); }
+@font-face { font-family: 'Fira Code'; src: url('./fonts/FiraCode-VariableFont_wght.ttf') format('truetype'); }
 
 * {
     font-family: 'Roboto Mono', monospace;
@@ -154,6 +152,12 @@ div:focus, dialog:focus {
     background: rgba(241, 241, 241, 0.55);
 }
 
+/* Writedown Editor ========================================================================================== */
+
+.rsw-editor * {
+    font-family: 'Fira Code', monospace !important;
+}
+
 .rsw-ce ul {
     list-style: disc;
     padding-left: 2em;
@@ -173,6 +177,28 @@ div:focus, dialog:focus {
     overflow: auto;
 }
 
+
+/* Loader ==================================================================================================== */
+
+.loader {
+    width: 1.5rem;
+    aspect-ratio: 1;
+    --c:no-repeat linear-gradient(#4b5563 0 0);
+    background: var(--c), var(--c), var(--c);
+    animation: anim-1 1s infinite,
+               anim-2 1s infinite;
+}
+@keyframes anim-1 {
+    0%,100% {background-size:20% 100%}
+    33%,66% {background-size:20% 20%}
+}
+@keyframes anim-2 {
+    0%,33%   {background-position: 0    0, 50% 50%, 100% 100%}
+    66%,100% {background-position: 100% 0, 50% 50%, 0    100%}
+}
+
+
+/* Media Queries =============================================================================================== */
 
 @media only screen and (max-width: 500px) {
     #root {
@@ -252,21 +278,4 @@ div:focus, dialog:focus {
     .rsw-ce {
         height: 480px;
     }
-}
-
-.loader {
-    width: 1.5rem;
-    aspect-ratio: 1;
-    --c:no-repeat linear-gradient(#4b5563 0 0);
-    background: var(--c), var(--c), var(--c);
-    animation: anim-1 1s infinite,
-               anim-2 1s infinite;
-}
-@keyframes anim-1 {
-    0%,100% {background-size:20% 100%}
-    33%,66% {background-size:20% 20%}
-}
-@keyframes anim-2 {
-    0%,33%   {background-position: 0    0, 50% 50%, 100% 100%}
-    66%,100% {background-position: 100% 0, 50% 50%, 0    100%}
 }
