chore(writedowns): remove unused file + fix editor toolbar
Remove unused "Editor" file & remove "Link" option in Editor toolbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -185,6 +185,11 @@ div:focus, dialog:focus {
     overflow: auto;
 }
 
+.rsw-btn[type='button'][title='Link'] {
+    display: none;
+    visibility: hidden;
+}
+
 
 /* Loader ==================================================================================================== */
 
