--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@
     }
 
     .underline--style {
-        @apply before:content-[''] before:absolute before:w-[50%] before:h-[10%] before:bg-gray-600 before:bottom-[-0.5rem] before:mx-auto before:left-0 before:right-0 before:transition-all before:duration-500
+        @apply before:content-[''] before:absolute before:w-[50%] before:h-[10%] before:bg-gray-600 before:bottom-[-0.5rem] before:mx-auto before:left-0 before:right-0 before:transition-all
     }
 
     .underline--hover {
@@ -48,7 +48,7 @@
     }
 
     .button--style {
-        @apply border-gray-600 border-[2px] px-3 py-2 text-gray-600 box-border font-medium
+        @apply border-gray-600 border-[2px] px-3 py-2 text-gray-700 box-border font-medium
     }
 
     .button--style--dark {
@@ -125,6 +125,10 @@ div:focus, dialog:focus {
     outline: none;
 }
 
+dialog button:focus {
+    outline: none;
+}
+
 .top-left-auto {
     top: auto !important;
     left: auto !important;
@@ -178,6 +182,8 @@ div:focus, dialog:focus {
 
 .rsw-toolbar {
     background-color: transparent !important;
+    min-width: 400px;
+    overflow-x: auto;
 }
 
 .rsw-ce {
@@ -216,7 +222,7 @@ div:focus, dialog:focus {
 @media only screen and (max-width: 500px) {
     #root {
         position: relative;
-        min-height: 650px;
+        min-height: 600px;
         overflow-y: auto;
     }
 
@@ -225,7 +231,6 @@ div:focus, dialog:focus {
     }
 
     #board-title-input {
-        font-size: 12px;
         border-bottom: 1px solid #181818;
         width: 100%;
     }
@@ -252,7 +257,7 @@ div:focus, dialog:focus {
     #board-options-wrapper > div > div:not(#board-menu), #board-options-wrapper > div > button {
         min-height: 36px;
         width: 75px !important;
-        font-size: 9px;
+        font-size: 10px;
         border-width: 2px;
         padding: 0 !important;
     }
@@ -269,10 +274,25 @@ div:focus, dialog:focus {
 
     #bottom-buttons > button {
         padding: 0.5rem;
-        font-size: 9px !important;
+        font-size: 10px !important;
     }
 
     .rsw-ce {
         height: 480px;
+    }
+
+    /*dialog.full-in-small-screen {*/
+    /*    width: 100vw !important;*/
+    /*    margin: 0 !important;*/
+    /*    max-width: 100vw !important;*/
+    /*    height: 100vh !important;*/
+    /*    max-height: 100vh !important;*/
+    /*    min-height: 100vh !important;*/
+    /*    min-width: 100vw !important;*/
+    /*}*/
+
+    dialog.full-in-small-screen textarea,
+    dialog.full-in-small-screen input:not([type='date']) {
+        font-size: 16px;
     }
 }
