--- a/client/src/index.css
+++ b/client/src/index.css
@@ -96,11 +96,6 @@
     background: #f1f1f1;
 }
 
-#board-wrapper {
-    height: calc(100% - 125px);
-    width: 100vw;
-}
-
 a {
     font-weight: 500;
     color: inherit;
@@ -157,7 +152,9 @@ dialog button:focus {
 }
 
 .card__item.focused {
-    background: rgba(173, 216, 230, 0.55);
+    background: rgba(173, 216, 230, 0.75) !important;
+    border: 2px solid #00008B !important;
+    box-shadow: 0 3px 0 0 #00008B !important;
 }
 
 .list__item {
